--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "node-sass": "^4.8.3",
     "parcel-bundler": "^1.7.0"
+  },
+  "dependencies": {
+    "aos": "^2.2.0"
   }
 }
