--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "parcel": "parcel index.html",
-    "build": "parcel build --public-url ./ index.html"
+    "build": "parcel build --public-url ./ index.html && cp img/card-image.png dist/"
   },
   "author": "",
   "license": "UNLICENSED",
